<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/activity_maps" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_media_play" />

    <!--suppress AndroidDomInspection -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="8dp"
        android:elevation="4dp"
        android:background="#BBFFFFFF">

        <TextView
            android:id="@+id/eNodeBNameLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/enodeb_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eNodeBNameTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_toEndOf="@id/eNodeBNameLabel" />

        <TextView
            android:id="@+id/eNodeBLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/enodeb"
            android:textStyle="bold"
            android:layout_below="@id/eNodeBNameLabel"/>

        <TextView
            android:id="@+id/eNodeBTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eNodeBNameTextView"
            android:layout_toEndOf="@id/eNodeBLabel" />

        <TextView
            android:id="@+id/cidLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/cid"
            android:textStyle="bold"
            android:layout_below="@id/eNodeBLabel"/>

        <TextView
            android:id="@+id/cidTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eNodeBTextView"
            android:layout_toEndOf="@id/cidLabel" />

        <TextView
            android:id="@+id/earfcnLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/earfcn"
            android:textStyle="bold"
            android:layout_below="@id/cidLabel"/>

        <TextView
            android:id="@+id/earfcnTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cidTextView"
            android:layout_toEndOf="@id/earfcnLabel" />

        <TextView
            android:id="@+id/pciLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/pci"
            android:textStyle="bold"
            android:layout_below="@id/earfcnLabel"/>

        <TextView
            android:id="@+id/pciTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/earfcnTextView"
            android:layout_toEndOf="@id/pciLabel" />

        <TextView
            android:id="@+id/tacLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/tac"
            android:textStyle="bold"
            android:layout_below="@id/pciLabel"/>

        <TextView
            android:id="@+id/tacTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pciTextView"
            android:layout_toEndOf="@id/tacLabel" />

        <TextView
            android:id="@+id/rsrpLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rsrp"
            android:textStyle="bold"
            android:layout_below="@id/eNodeBNameTextView"
            android:layout_toEndOf="@id/eNodeBTextView"/>

        <TextView
            android:id="@+id/rsrpTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/eNodeBNameTextView"
            android:layout_toEndOf="@id/rsrpLabel" />

        <TextView
            android:id="@+id/rsrqLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rsrq"
            android:textStyle="bold"
            android:layout_toEndOf="@id/cidTextView"
            android:layout_below="@id/rsrpLabel"/>

        <TextView
            android:id="@+id/rsrqTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rsrpTextView"
            android:layout_toEndOf="@id/rsrpLabel" />

        <TextView
            android:id="@+id/taLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/ta"
            android:textStyle="bold"
            android:layout_toEndOf="@id/earfcnTextView"
            android:layout_below="@id/rsrqLabel"/>

        <TextView
            android:id="@+id/taTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rsrqTextView"
            android:layout_toEndOf="@id/taLabel" />

        <TextView
            android:id="@+id/rssiLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rssi"
            android:textStyle="bold"
            android:layout_toEndOf="@id/pciTextView"
            android:layout_below="@id/taLabel"/>

        <TextView
            android:id="@+id/rssiTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/taTextView"
            android:layout_toEndOf="@id/rssiLabel" />

        <TextView
            android:id="@+id/snrLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/snr"
            android:textStyle="bold"
            android:layout_toEndOf="@id/tacTextView"
            android:layout_below="@id/rssiLabel"/>

        <TextView
            android:id="@+id/snrTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rssiTextView"
            android:layout_toEndOf="@id/snrLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/filterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="12dp"
        android:background="#BBFFFFFF"
        android:elevation="4dp"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/filterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/filterLabel" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/legendGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_margin="12dp"
        android:padding="8dp"
        android:elevation="4dp"
        android:background="#BBFFFFFF">

        <se.pcprogramkonsult.coveragemap.ui.ParameterLegendView
            android:id="@+id/parameterLegendView"
            android:layout_width="100dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/minLegendLabelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/parameterLegendView"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/maxLabelLegendView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/parameterLegendView"
            android:layout_alignEnd="@id/parameterLegendView"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/legendTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_below="@id/minLegendLabelView"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>